W-18687846: Update dependency commons-beanutils:commons-beanutils to v1.11.0 (#14143)