@@ -20,8 +20,8 @@ public class Orange implements OrangeInterface {
   private static final long serialVersionUID = 2556604671068150589L;
 
   private boolean bitten = false;
-  private Integer segments = new Integer(10);
-  private Double radius = new Double(4.34);
+  private Integer segments = Integer.valueOf(10);
+  private Double radius = Double.valueOf(4.34);
   private String brand = "Pirulo";
 
   private FruitCleaner cleaner;
